Fix create alias documentation
