# src/contollers/types.ts
@@ -1,0 +1,8 @@
+export interface CreateAliasRequest {
+    url: string
+}
+
+export interface CreateAliasResponse {
+    url: string;
+    alias: string;
+}
