# src/tsoa/swagger.json
@@ -26,7 +26,7 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"Pick_Alias.url-or-alias_": {
+			"CreateAliasResponse": {
 				"properties": {
 					"url": {
 						"type": "string"
@@ -40,10 +40,19 @@
 					"alias"
 				],
 				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
+				"additionalProperties": false
 			},
-			"CreateAliasResponse": {
-				"$ref": "#/components/schemas/Pick_Alias.url-or-alias_"
+			"CreateAliasRequest": {
+				"properties": {
+					"url": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"url"
+				],
+				"type": "object",
+				"additionalProperties": false
 			}
 		},
 		"securitySchemes": {}
@@ -124,8 +133,19 @@
 						}
 					}
 				},
+				"description": "Saves the url and returns an alias for it",
 				"security": [],
-				"parameters": []
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/CreateAliasRequest"
+							}
+						}
+					}
+				}
 			}
 		}
 	},
